<resources>
    <string name="app_name">Calculator</string>

    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>


    <string name="btnEqual">=</string>
    <string name="btnDot">.</string>

    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="btnMultiply">*</string>
    <string name="btnDivide">÷</string>

    <string name="btnMR">MR</string>
    <string name="btnMC">MC</string>
    <string name="btnMemPlus">M+</string>
    <string name="btnMemMinus">M-</string>
    <string name="btnDel">←</string>


    <string name="btnAC">AC</string>
    <string name="btnHistory">History</string>

    <string name="btnTextSize">20sp</string>

</resources>
