<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="150"
    android:orientation="horizontal"
    android:stretchColumns="*"
    tools:context="calculator.niaz.com.calculator.Main">

    <TableLayout android:layout_weight="70">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"

            android:weightSum="1">

            <TextView
                android:id="@+id/textBox"
                style="@style/TextTheme"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:maxLines="2"
                android:inputType="numberDecimal|numberSigned"
                android:digits="0123456789.+-*/%()"

                />

        </TableRow>
    </TableLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="20"
        android:weightSum="5">

        <Button
            android:id="@+id/btn7"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/btn8"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/btn9"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/btnPlus"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnPlus" />

        <Button
            android:id="@+id/btnMC"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnMC" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_weight="20"

        >

        <Button
            android:id="@+id/btn4"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/btn5"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/btn6"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btnMinus"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnMinus" />

        <Button
            android:id="@+id/btnMR"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnMR" />
    </TableRow>

    <TableRow android:layout_weight="20">

        <Button
            android:id="@+id/btn1"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btn2"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btn3"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btnMultiply"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnMultiply" />

        <Button
            android:id="@+id/btnMemPlus"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnMemPlus" />
    </TableRow>

    <TableRow android:layout_weight="20">

        <Button
            android:id="@+id/btnDot"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnDot" />

        <Button
            android:id="@+id/btn0"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn0" />

        <Button
            android:id="@+id/btnEqual"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnEqual" />

        <Button
            android:id="@+id/btnDivide"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnDivide"
            />
        <Button
            android:id="@+id/btnMemMinus"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnMemMinus"
            />



    </TableRow>

    <TableRow android:layout_weight="20">

        <Button
            android:id="@+id/btnHistory"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnHistory"

            />

        <Button
            android:id="@+id/btnAC"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnAC" />
        <Button
            android:id="@+id/btnDel"
            style="@style/BtnTheme"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnDel"
            android:textSize="20sp" />
    </TableRow>

</TableLayout>

